--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "css-minimizer-webpack-plugin": "^7.0.0",
     "css-unicode-loader": "^1.0.3",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.1.7",
     "mini-css-class-name": "^0.15.1",
     "mini-css-extract-plugin": "^2.9.1",
     "mini-svg-data-uri": "^1.4.4",
