--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.3",
-    "webpack": "^5.95.0",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^6.0.1",
     "webpack-obsolete-plugin": "^1.0.5"
@@ -81,6 +81,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.0",
     "web-ui-pack": "^1.2.1"
   },
   "optionalDependencies": {
