--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
+    "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "ajv": "^8.17.1",
@@ -55,6 +56,9 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "css-unicode-loader": "^1.0.3",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.7",
     "mini-css-class-name": "^0.15.1",
@@ -73,6 +77,7 @@
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.16.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^6.0.1",
