--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "web-ui-pack": "^1.2.1"
   },
   "optionalDependencies": {
@@ -88,7 +89,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.4.0",
     "@types/express": "^4.17.21",
-    "eslint": "^9.12.0",
+    "eslint": "^9.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
