--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "ajv": "^8.17.1",
