--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.2",
     "react-router-dom": "^7.0.1",
     "web-ui-pack": "^1.2.1"
   },
