--- a/package.json
+++ b/package.json
@@ -81,11 +81,15 @@
     "webpack-obsolete-plugin": "^1.0.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-ui-pack": "^1.2.1"
   },
   "optionalDependencies": {
