--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
     "webpack-obsolete-plugin": "^1.0.5"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "lodash": "^4.17.21",
